--- a/app/assets/stylesheets/promo.scss
+++ b/app/assets/stylesheets/promo.scss
@@ -35,7 +35,7 @@ h2 {
 }
 
 .first {
-  background-color: #B09CFF;
+  background-color: red;
   background-image: image_url('elipses.svg');
   background-repeat: no-repeat;
   background-position: center;
