--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :name %>
   </div>
 
+  <div>
+  	<%= form.label :image %>
+  	<%= form.file_field :image %>
+  </div>
+  
   <div class="field">
     <h4>Название статьи</h4>
     <%= form.text_field :title %>
