--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,18 +5,23 @@
 <table>
   <thead>
     <tr>
-      <th>Имя артиста</th>
-      <th colspan="3"></th>
+      <!-- <th>Имя артиста</th>
+      <th>Фото</th> -->
+      <th colspan="2"></th>
     </tr>
   </thead>
 
-  <tbody>
+  <tbody class="posts">
     <% @posts.each do |post| %>
-      <tr>
+      <tr class="posts_item">
+        <td><%= image_tag(post.image.thumb.url, alt: 'Image')%></td>
         <td><%= post.name %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td>
+          <%= link_to 'Show', post %>
+          <%= link_to 'Edit', edit_post_path(post) %>
+          <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
