--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Имя артиста:</strong>
-  <%= @post.name %>
-</p>
-<p>
-	<strong></strong>
-	<%= @post.country %>
-</p>
-<p>
-	<strong></strong>
-	<%= @post.filterTag %>
-</p>
-<p>
-	<strong>Характеристики стиля:</strong>
-	<%= @post.characteristics %>
-</p>
-<p>
-	<strong>Любимые бренды:</strong>
-	<%= @post.brands %>
-</p>
+<div class="post_main">
+
+  <div class="post_main_foto">
+    <%= link_to(image_tag(@post.image.thumb.url, alt: 'Image'), @post.image.url, target: '_blank') if @post.image? %>
+  </div>
+  <div class="post_main_text">
+    <p>
+      <strong>Имя артиста:</strong>
+      <%= @post.name %>
+    </p>
+
+    <p>
+    	<strong></strong>
+    	<%= @post.country %>
+    </p>
+    <p>
+    	<strong></strong>
+    	<%= @post.filterTag %>
+    </p>
+    <p>
+    	<strong>Характеристики стиля:</strong>
+    	<%= @post.characteristics %>
+    </p>
+    <p>
+    	<strong>Любимые бренды:</strong>
+    	<%= @post.brands %>
+    </p>
+  </div>
+</div>
+
 <p>
   <strong>Название статьи:</strong>
   <%= @post.title %>
