--- a/app/views/promo/index.html.erb
+++ b/app/views/promo/index.html.erb
@@ -6,6 +6,7 @@
     <title>FLAVA</title>
   </head>
   <body>
+    <%= render "navbar" %>
     <section class="section first">
       <div class="description">
         <h2>
