--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,7 +1,9 @@
+
 body {
   background-color: #fff;
   color: #333;
-  margin: 60px; }
+  // margin: 60px;
+}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -19,9 +21,9 @@ a {
 a:visited {
   color: #666; }
 
-a:hover {
-  color: #fff;
-  background-color: #000; }
+// a:hover {
+//   color: #fff;
+//   background-color: #000; }
 
 th {
   padding-bottom: 5px; }
@@ -63,3 +65,36 @@ div.actions {
 
 label {
   display: block; }
+
+.header {
+  display: flex;
+   ul {
+     display: flex;
+     li {
+
+       padding-top: 34px;
+       a {
+         font-family: 'Halvar Breit Md', sans-serif;
+         font-size: 20px;
+         line-height: 20px;
+         font-weight: 500;
+         color: black;
+         text-decoration: none;
+         padding: 0 29px;
+       }
+     }
+   }
+   h1 {
+     font-family: 'Halvar Breit Md', sans-serif;
+     font-size: 48px;
+     line-height: 48px;
+     font-weight: 500;
+     color: black;
+     margin-right: 38px;
+     padding: 21px 60px;
+   }
+}
+.header li:hover {
+  background: #BCF369;
+  cursor: pointer;
+}
