--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #fff;
+  background-color: #F5F5F5;
   color: #333;
   // margin: 60px;
 }
@@ -16,7 +16,8 @@ pre {
   font-size: 11px; }
 
 a {
-  color: #000; }
+  // color: #000; 
+}
 
 a:visited {
   color: #666; }
@@ -29,7 +30,8 @@ th {
   padding-bottom: 5px; }
 
 td {
-  padding: 0 5px 7px; }
+  // padding: 0 5px 7px;
+}
 
 div.field,
 div.actions {
@@ -68,6 +70,7 @@ label {
 
 .header {
   display: flex;
+  background: white;
    ul {
      display: flex;
      li {
