--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -16,7 +16,7 @@ pre {
   font-size: 11px; }
 
 a {
-  // color: #000; 
+  // color: #000;
 }
 
 a:visited {
@@ -95,6 +95,7 @@ label {
      color: black;
      margin-right: 38px;
      padding: 21px 60px;
+     display: block;
    }
 }
 .header li:hover {
