--- a/app/views/promo/_navbar.html.erb
+++ b/app/views/promo/_navbar.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "Промо", promo_path %>
     </li>
     <li class="header__link">
-      <%= link_to "О нас" %>
+      <%= link_to "О нас", about_path %>
     </li>
     <li class="header__link">
       <%= link_to "Блог", posts_path %>
