--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,12 +1,12 @@
 <%= render "promo/navbar" %>
-<section class="a_heading">
-  <h1>Медиа-сервис о&nbspстиле музыкальных исполнителей</h1>
+<section class="ab heading">
+  <h1>Медиа-сервис о&nbspстиле&nbspмузыкальных исполнителей</h1>
 </section>
-<section class="a_concept">
+<section class="ab concept">
   <h1>Концепция</h1>
   <h2>Платформа, где собрана подробная информация об&nbspобразах артистов разных времён и&nbspжанров. Платформа для&nbspтех, для&nbspкого музыкальная индустрия — не&nbspтолько сама музыка, но&nbspи&nbspвизуал</h2>
 </section>
-<section class="research">
+<section class="ab research">
   <h1>Исследования</h1>
   <p class="per_big">86%</p>
   <h2>обращают внимание на&nbspодежду музыкантов, чья музыка им нравится</h2>
@@ -26,11 +26,11 @@
   </div>
   <p class="participants">* 101 участник опроса</p>
 </section>
-<section class="conclusion">
+<section class="ab conclusion">
   <h2>Выводы</h2>
   <h3>Слушателям интересна не&nbspтолько музыка, но&nbspи&nbspвизуальная подача и&nbspстиль исполнителей. Артисты влияют на&nbspмоду, задают тренды. Люди любят смотреть на&nbspобразы кумиров и&nbspвдохновляются ими</h3>
 </section>
-<section class="audience">
+<section class="ab audience">
   <h1>Целевая аудитория</h1>
   <h2>Фанаты, которые следят за&nbspлюбимыми исполнителями</h2>
   <h2>Стилисты и&nbspдизайнеры одежды, изучающие и&nbspанализирующие моду в&nbspконтексте музыкальной индустрии</h2>
@@ -53,7 +53,7 @@
     </div>
   </div>
 </section>
-<section class="possibilities">
+<section class="ab possibilities">
   <h1>Возможности</h1>
   <div class="screeens"></div>
   <div class="list">
@@ -63,7 +63,7 @@
     <h3>Сохранять понравившиеся вещи и идеи образов</h3>
   </div>
 </section>
-<section>
+<section class="ab jtbd">
   <div class="job">
     <h1>Job story</h1>
     <h3>Когда собираюсь на концерт, хочу узнать об особенностях стиля исполнителей этого жанра, чтобы влиться в комьюнити фанатов</h3>
@@ -74,7 +74,7 @@
   </div>
   <div class="unisex"></div>
 </section>
-<section class="inspire">
+<section class="ab inspire">
   <h2>Вдохновляйся стилем любимых артистов вместе с FLAVA</h2>
   </section>
 <%= render "promo/futer" %>
