--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -51,6 +51,26 @@
     <%= form.text_area :content %>
   </div>
 
+  <div>
+  	<%= form.label :fpic %>
+  	<%= form.file_field :fpic %>
+  </div>
+
+  <div>
+  	<%= form.label :spic %>
+  	<%= form.file_field :spic %>
+  </div>
+
+  <div>
+  	<%= form.label :tpic %>
+  	<%= form.file_field :tpic %>
+  </div>
+
+  <div>
+  	<%= form.label :lpic %>
+  	<%= form.file_field :lpic %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
