--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -13,18 +13,18 @@
   <div class="percent_group">
     <div class="percent">
       <p class="per_small">79%</p>
-      <h3>считают, что внешний образ артиста важен для&nbspпонимания его&nbspмузыки</h3>
+      <h3>считают, что<br>внешний образ<br>артиста важен<br>для&nbspпонимания<br>его&nbspмузыки</h3>
     </div>
     <div class="percent">
       <p class="per_small">75%</p>
-      <h3>замечают, что стиль музыканта влияет на&nbspпредпочтения в&nbspодежде его слушателей</h3>
+      <h3>замечают, что стиль<br>музыканта влияет<br>на&nbspпредпочтения<br>в&nbspодежде его<br>слушателей</h3>
     </div>
     <div class="percent">
       <p class="per_small">60%</p>
-      <h3>любят читать/смотреть/слушать о&nbspвизуальной культуре артистов</h3>
+      <h3>любят читать/<br>смотреть/слушать<br>о&nbspвизуальной<br>культуре артистов</h3>
     </div>
   </div>
-  <p class="participants">* 101 участник опроса</p>
+  <h4 class="participants">* 101 участник опроса</h4>
 </section>
 <section class="ab conclusion">
   <h2>Выводы</h2>
@@ -33,23 +33,25 @@
 <section class="ab audience">
   <h1>Целевая аудитория</h1>
   <h2>Фанаты, которые следят за&nbspлюбимыми исполнителями</h2>
-  <h2>Стилисты и&nbspдизайнеры одежды, изучающие и&nbspанализирующие моду в&nbspконтексте музыкальной индустрии</h2>
+  <h2 class="st">Стилисты и&nbspдизайнеры одежды, изучающие и&nbspанализирующие моду в&nbspконтексте музыкальной индустрии</h2>
   <div class="segments">
+    <div class="el1"></div>
+    <div class="el2"></div>
     <div class="segment main">
-      <h3>Основная</h3>
-      <h4>фанаты, стилисты, дизайнеры одежды</h4>
-    </div>
-    <div class="segment ">
-      <h3>Косвенная</h3>
-      <h4>слушатели музыкантов, артисты, модники</h4>
-    </div>
+        <h3>Основная</h3>
+        <h4>фанаты, стилисты,<br>дизайнеры одежды</h4>
+      </div>
+      <div class="segment ">
+        <h3>Косвенная</h3>
+        <h4>слушатели<br>музыкантов,<br>артисты, модники</h4>
+      </div>
     <div class="segment wide">
-      <h3>Широкая</h3>
-      <h4>люди, которые интересуются музыкой и&nbspстилем</h4>
-    </div>
-    <div class="segment ">
-      <h3>Узкая</h3>
-      <h4>фанаты, модники, начинающие музыканты</h4>
+        <h3>Широкая</h3>
+        <h4>люди, которые<br>интересуются<br>музыкой и&nbspстилем</h4>
+      </div>
+      <div class="segment ">
+        <h3>Узкая</h3>
+        <h4>фанаты, модники,<br>начинающие<br>музыканты</h4>
     </div>
   </div>
 </section>
@@ -57,10 +59,10 @@
   <h1>Возможности</h1>
   <div class="screeens"></div>
   <div class="list">
-    <h3>Следить за образами любимых исполнителей</h3>
-    <h3>Узнавать, что носили музыканты разных жанров в разное время</h3>
-    <h3>Находить вещи, как у артистов</h3>
-    <h3>Сохранять понравившиеся вещи и идеи образов</h3>
+    <h3 id="s">Следить за образами любимых исполнителей</h3>
+    <h3 id="u">Узнавать, что носили музыканты разных жанров в разное время</h3>
+    <h3 id="n">Находить вещи, как&nbspу&nbspартистов</h3>
+    <h3 id="save">Сохранять понравившиеся вещи и идеи образов</h3>
   </div>
 </section>
 <section class="ab jtbd">
@@ -69,9 +71,10 @@
     <h3>Когда собираюсь на концерт, хочу узнать об особенностях стиля исполнителей этого жанра, чтобы влиться в комьюнити фанатов</h3>
   </div>
   <div class="user">
-    <h1>Job story</h1>
+    <h1>User story</h1>
     <h3>Я как стилист, хочу смотреть и читать об образах артистов, чтобы понимать, как используются тренды </h3>
   </div>
+  <div class="filters"></div>
   <div class="unisex"></div>
 </section>
 <section class="ab inspire">
