--- a/app/assets/stylesheets/subscribers.scss
+++ b/app/assets/stylesheets/subscribers.scss
@@ -31,6 +31,7 @@ input.sub_input::placeholder {
   border: 2px solid #B09CFF;
   color: black;
   transition: .4s;
+  width: auto;
 }
 .sub_btn:hover {
   cursor: pointer;
