--- a/app/views/promo/_futer.html.erb
+++ b/app/views/promo/_futer.html.erb
@@ -2,7 +2,7 @@
   <p>© 2021</p>
   <ul class="futer__links">
     <li class="futer__link">
-      <%= link_to "О нас" %>
+      <%= link_to "О нас", about_path %>
     </li>
     <li class="futer__link">
       <%= link_to "Блог", posts_path %>
