смена тегов на категориии в форме поста

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="field">
-    <h4>Теги</h4>
+    <h4>Категории</h4>
     <%= form.select :filterTag, ['Рэп', 'Поп', 'Креативные','Душевные', 'Легенды'] %>
   </div>
 
