--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,7 @@
-
 body {
-  background-color: #F5F5F5;
+  background-color: #fff;
   color: #333;
-  // margin: 60px;
-}
+  margin: 33px; }
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -16,22 +14,20 @@ pre {
   font-size: 11px; }
 
 a {
-  // color: #000;
-}
+  color: #000; }
 
 a:visited {
   color: #666; }
 
-// a:hover {
-//   color: #fff;
-//   background-color: #000; }
+a:hover {
+  color: #fff;
+  background-color: #000; }
 
 th {
   padding-bottom: 5px; }
 
 td {
-  // padding: 0 5px 7px;
-}
+  padding: 0 5px 7px; }
 
 div.field,
 div.actions {
@@ -67,77 +63,3 @@ div.actions {
 
 label {
   display: block; }
-
-.header {
-  display: flex;
-  background: white;
-   ul {
-     display: flex;
-     li {
-       transition: .5s;
-       padding-top: 34px;
-       a {
-         font-family: 'Halvar Breit Md', sans-serif;
-         font-size: 20px;
-         line-height: 20px;
-         font-weight: 500;
-         color: black;
-         text-decoration: none;
-         padding: 0 29px;
-       }
-     }
-   }
-   h1 {
-     font-family: 'Halvar Breit Md', sans-serif;
-     font-size: 48px;
-     line-height: 48px;
-     font-weight: 500;
-     color: black;
-     margin-right: 38px;
-     padding: 21px 60px;
-     display: block;
-   }
-}
-.header li:hover {
-  background: #BCF369;
-  cursor: pointer;
-  transition: .2s;
-}
-
-$Font: 'Halvar Breit Md', sans-serif;
-@mixin font($s: 11px, $l: 24px, $mt: 67px) {
-font-size: $s;
-line-height: $l;
-margin-top: $mt;
-}
-
-.futer {
-  height: 128px;
-  background: black;
-  display: flex;
-  justify-content: space-between;
-  padding:  36px 2px 36px 60px;
-  p {
-    font-family: $Font;
-    @include font(20px, 23px, 0px);
-    color: #BCF369;
-  }
-  ul {
-    display: flex;
-  }
-  li {
-    font-family: $Font;
-    @include font(20px, 23px, 0px);
-    margin-right: 58px;
-    a {
-      color: #BCF369;
-      text-decoration: none;
-      transition: .4s;
-    }
-  }
-}
-
-.futer li a:hover {
-  color: #B09CFF;
-  transition: .2s;
-}
